# Shittle

./: .gitignore  CMakeLists.txt  README.md  buildEditor.nix  default.nix
common/include/: Algorithms.hpp  Bigger.hpp  Button.hpp  FilePrompt.hpp  FileStreamCommon.hpp  FilesystemCommon.hpp  InputState.hpp  Level.hpp  LevelLoader.hpp  LevelSaveLoad.hpp  LevelSaver.hpp  MulColor.hpp  Notification.hpp  PegInfo.hpp  PegShape.hpp  RenderList.hpp  ResourceManager.hpp  ResourceManagerResource.hpp  SaveManager.hpp  Scaler.hpp  ScreenRatioScaler.hpp  SerializedData.hpp  SizedForwardList.hpp  TextFeild.hpp  TextField.hpp
common/include/ResourceManger/: FontResource.hpp  ImageResource.hpp  Resource.hpp  ResourceFactory.hpp
common/src/: Algorithms.cpp  Button.cpp  FilePrompt.cpp  FileStreamCommon.cpp  FilesystemCommon.cpp  GTKNotification.cpp  GtkFilePrompt.cpp  InputState.cpp  LevelLoader.cpp  LevelSaveLoad.cpp  LevelSaver.cpp  MulColor.cpp  RenderList.cpp  ResourceManager.cpp  ResourceManagerResource.cpp  SaveManager.cpp  Scaler.cpp  ScreenRatioScaler.cpp  TextFeild.cpp  TextField.cpp
common/src/ResourceManager/: FontResource.cpp  ImageResource.cpp  Resource.cpp  ResourceFactory.cpp
editor/include/: ButtonType.hpp  CursorType.hpp  DrawCommon.hpp  Level.hpp  Peg.hpp  PegCommon.hpp  RunEditor.hpp  SelectCommon.hpp  SelectedPeg.hpp
editor/src/: CursorType.cpp  DrawCommon.cpp  Level.cpp  Peg.cpp  PegCommon.cpp  RunEditor.cpp  SelectCommon.cpp  SelectedPeg.cpp  main.cpp
